# numpy-opencv-converter

./: .gitignore  CMakeLists.txt
cmake/: boost-python.cmake
tests/: rgb_test_module.cpp
utils/: conversion.cpp
